new components forgot-password and reset-password

--- a/src/app/customer/login/login-customer.html
+++ b/src/app/customer/login/login-customer.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- pwd recovery link -->
-    <a class="btn-password" routerLink="/recovery-password">Passwort vergessen?</a>
+    <a class="btn-password" routerLink="/forgot-password">Passwort vergessen?</a>
 
     <!-- separator -->
     <div class="seperator-container">
@@ -95,7 +95,7 @@
 
   <!-- goggle btn -->
   <a class="input-focus btn-google" (click)="createNewUserWithGoogle()">
-    <img src="/assets/google-logo-icon.svg" alt="google logo" />
+    <img src="./assets/google-logo-icon.svg" alt="google logo" />
     Anmeldung mit Google
   </a>
 </section>
