--- a/src/app/customer/reset-password/reset-password.scss
+++ b/src/app/customer/reset-password/reset-password.scss
@@ -16,16 +16,16 @@
   .form-title {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     height: 2.5rem;
     margin-bottom: 1.875rem;
     .form-title-name {
       color: basic.$primary;
-      font-size: 1.875rem;
+      font-size: 1.8rem;
       font-weight: 700;
-      line-height: normal;
       text-align: center;
+      line-height: normal;
     }
     .info-container {
       background: none;
@@ -37,18 +37,12 @@
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      //   animation: pulse-effect 2s infinite;
+      animation: pulse-effect 2s infinite;
     }
   }
   .description {
     text-align: center;
     margin-bottom: 1.875rem;
-    .new-user-link {
-      color: basic.$primary;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
   }
 
   form {
@@ -65,30 +59,6 @@
       width: 100%;
       label {
         // margin-bottom: 1.875rem;
-      }
-      .input-icon {
-        position: absolute;
-        top: 2.375rem;
-        left: 0;
-        padding: 0 1.5625rem;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .warn-txt-hight {
-        height: 55px;
-      }
-
-      .eye-button {
-        position: absolute;
-        top: 2.275rem;
-        right: 0;
-        padding: 0 1.5625rem;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        background: none;
       }
     }
     .input-field {
@@ -109,9 +79,30 @@
         outline: basic.$secondary;
       }
     }
-    input:-webkit-autofill {
-      background-color: basic.$body-bg;
-      box-shadow: 0 0 0px 62.5rem basic.$body-bg inset;
+
+    .input-icon {
+      position: absolute;
+      top: 2.375rem;
+      left: 0;
+      padding: 0 1.5625rem;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .eye-button {
+      position: absolute;
+      top: 2.275rem;
+      right: 0;
+      padding: 0 1.5625rem;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      background: none;
+    }
+
+    .match {
+      height: 1.125rem;
     }
 
     .btn-password {
@@ -125,7 +116,7 @@
       border-radius: basic.$border-radius;
       margin-bottom: 30px;
       border: solid 0.0625rem transparent;
-      transition: all 175ms ease-in-out;
+      transition: basic.$first-transition;
       &:hover {
         color: basic.$primary;
         background: basic.$body-bg;
@@ -138,17 +129,27 @@
       }
     }
   }
+  .eye-pos {
+    top: 13%;
+    left: 89%;
+  }
+
+  p {
+    text-align: center;
+    margin-bottom: 1.875rem;
+  }
+
   .btn-container {
     display: flex;
     justify-content: center;
     gap: 1.875rem;
-    width: 100%;
     margin-top: 1.875rem;
+    width: 100%;
 
     .forward-btn {
       display: flex;
       justify-content: center;
-      width: 10.375rem;
+      width: fit-content;
       font-weight: 700;
       font-size: 1.125rem;
       gap: 0.625rem;
@@ -169,38 +170,6 @@
         border: solid 0.0625rem basic.$primary;
         background-color: basic.$body-bg;
         color: basic.$primary;
-      }
-    }
-  }
-  .checkbox-container {
-    display: flex;
-    max-width: 31.25rem;
-    width: 100%;
-    gap: 0.5rem;
-    .checkbox-content {
-      display: flex;
-      align-items: center;
-      column-gap: 0.625rem;
-      input {
-        display: flex;
-        margin-bottom: auto;
-        cursor: pointer;
-        width: 1.25rem;
-        height: 1.25rem;
-      }
-    }
-    label {
-      font-size: 1rem;
-      font-weight: 400;
-      line-height: 1.05rem;
-      text-align: left;
-      .privacy {
-        text-decoration: none;
-        color: basic.$primary;
-        cursor: pointer;
-        &:hover {
-          text-decoration: underline;
-        }
       }
     }
   }
