--- a/src/styles.scss
+++ b/src/styles.scss
@@ -179,8 +179,9 @@ app-invoice {
   font-weight: bold;
 }
 
+app-reset-password,
 app-confirmation,
-app-pwd-recovery-customer,
+app-forgot-password,
 app-register-customer,
 app-login {
   display: flex;
