links adjusted to create-account

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,7 +182,7 @@ app-invoice {
 app-reset-password,
 app-confirmation,
 app-forgot-password,
-app-register-customer,
+app-create-account,
 app-login {
   display: flex;
   justify-content: center;
