--- a/src/app/customer/login/login-customer.html
+++ b/src/app/customer/login/login-customer.html
@@ -7,7 +7,7 @@
     Wir empfehlen dir, die E-Mail-Adresse zu nutzen, die du bei der Arbeit verwendest.
   </p>
   <p class="description">
-    Hast du kein konto? <a class="new-user-link" routerLink="/register">Konto erstellen</a>
+    Hast du kein konto? <a class="new-user-link" routerLink="/create-account">Konto erstellen</a>
   </p>
 
   <!-- form container -->
