login in frontend works

--- a/src/app/customer/login-customer/login-customer.html
+++ b/src/app/customer/login-customer/login-customer.html
@@ -11,7 +11,7 @@
   </p>
 
   <!-- form container -->
-  <form [formGroup]="loginForm" (ngSubmit)="loginWithEmailAndPassword('Du bist angemeldet')">
+  <form [formGroup]="loginForm" (ngSubmit)="loginWithEmailAndPassword()">
     <div class="input-container">
       <label class="" for="userEmail">E-Mail-Adresse</label>
       <input
