reset password in progress

--- a/src/app/customer/reset-password/reset-password.html
+++ b/src/app/customer/reset-password/reset-password.html
@@ -16,7 +16,7 @@
     </button>
   </div>
 
-  <form [formGroup]="resetForm" (ngSubmit)="pwdReset('Das Passwort wurde erfolgreich geändert.')">
+  <form [formGroup]="resetForm" (ngSubmit)="submit()">
     <div class="input-container">
       <label class="" for="password1">Passwort</label>
       <input
