login in frontend works

--- a/src/app/customer/forgot-password/forgot-password.html
+++ b/src/app/customer/forgot-password/forgot-password.html
@@ -5,7 +5,7 @@
   <h1 class="title">
     Passwort zurücksetzen
   </h1>  
-    <form [formGroup]="recoveryForm" (ngSubmit)="sendEmail($event, 'E-Mail gesendet')">
+    <form [formGroup]="recoveryForm" (ngSubmit)="submit()">
       <div class="input-container">
 
         <label for="name">Bitte gib deine E-Mail ein:</label>
