--- a/src/app/customer/reset-password/reset-password.html
+++ b/src/app/customer/reset-password/reset-password.html
@@ -1,6 +1,6 @@
 <section class="main-content-customer">
   <div class="form-title">
-    <a class="arrow-back" routerLink="/start">
+    <a class="arrow-back" routerLink="/login">
       <app-back></app-back>
     </a>
 
@@ -95,7 +95,7 @@
     </div>
 
     <div class="btn-container">
-      <button type="submit" class="forward-btn" routerLink="/login" [disabled]="!resetForm.valid">
+      <button type="submit" class="forward-btn" [disabled]="!resetForm.valid">
         Passwort ändern
       </button>
     </div>
