--- a/src/app/customer/create-account/create-account.html
+++ b/src/app/customer/create-account/create-account.html
@@ -11,7 +11,7 @@
     Hast du schon ein Konto? <a class="new-user-link" routerLink="/login">Anmelden</a>
   </p>
 
-  <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="myForm" (ngSubmit)="submit()">
     <div class="input-container">
       <label class="" for="email">Dein E-Mail</label>
       <input
