implement of google sing in

--- a/src/app/crm/shared/invoice/invoice.html
+++ b/src/app/crm/shared/invoice/invoice.html
@@ -11,7 +11,7 @@
         <h2>RECHNUNG</h2>
         <p>Rechnung Nr. #00123</p>
         <p>Kundennr.: SK13245613</p>
-        <p>Date: {{currentDate | date:'dd.MM.yyyy' }}</p>
+        <!-- <p>Date: {{currentDate | date:'dd.MM.yyyy' }}</p> -->
         </div>
     </header>
 
