--- a/src/app/customer/login-customer/login-customer.html
+++ b/src/app/customer/login-customer/login-customer.html
@@ -94,7 +94,7 @@
   </form>
 
   <!-- goggle btn -->
-  <a class="input-focus btn-google" (click)="createNewUserWithGoogle()">
+  <a class="input-focus btn-google" (click)="createOrLoginWithGoogle()">
     <img src="./assets/google-logo-icon.svg" alt="google logo" />
     Anmeldung mit Google
   </a>
