--- a/src/app/customer/dashboard-customer/dashboard-customer.html
+++ b/src/app/customer/dashboard-customer/dashboard-customer.html
@@ -1,1 +1,7 @@
 <p>dashboard-customer works!</p>
+
+<img width="45px" height="45px" class="message" src="/assets/bell.svg" alt="Nachrichten">
+
+<button (click)="logOut()">
+    <img width="40px" height="40px" class="profile-img" src="/assets/profile.svg" alt="Profile">
+</button>
