create the main structure of logged in side

--- a/src/app/customer/layout-customer/layout-customer.html
+++ b/src/app/customer/layout-customer/layout-customer.html
@@ -1,8 +1,8 @@
 <main>
-  <app-navbar></app-navbar>
+   <app-navbar-customer></app-navbar-customer>
 
   <div class="main-content">
-    <app-header></app-header>
+    <app-header-customer></app-header-customer>
     <router-outlet></router-outlet>
   </div>
   <app-toast
