--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,14 +42,20 @@ h3 {
   margin-bottom: 1rem;
 }
 
+app-header-customer,
 app-header {
-  display: block;
+  display: flex;
   margin: 0.0625rem 0.0625rem 0 0.0625rem;
   height: 4.5rem;
   border-right: 1px solid basic.$border-color;
   border-bottom: 1px solid basic.$border-color;
+  padding: 1rem;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
 }
 
+app-navbar-customer,
 app-navbar {
   position: sticky;
   top: 0;
@@ -70,14 +76,6 @@ app-customers,
 app-customer-details {
   margin: 1rem;
   padding: 0 1rem 1rem 1rem;
-}
-
-app-header {
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 1rem;
 }
 
 app-company {
