--- a/src/app/crm/customers/customer-details/customer-details.html
+++ b/src/app/crm/customers/customer-details/customer-details.html
@@ -135,7 +135,7 @@
   </address>
 
     <div class="btn-container">
-      <a href="/kunden" class="new-customer">Zurück</a>
+      <a href="/crm/kunden" class="new-customer">Zurück</a>
       <button (click)="editDetails()" class="new-customer">Bearbeiten</button>
     </div>
   </div>
