--- a/src/app/crm/customers/customers.html
+++ b/src/app/crm/customers/customers.html
@@ -44,13 +44,13 @@
                     </button>
 
                     <ul role="menu" class="crmSK-popper" [class.show]="openMenuId === customer.id">
-                        <li class="crmSK-popper-li" [routerLink]="['/kunden', customer.id]">
+                        <li class="crmSK-popper-li" [routerLink]="['/crm/kunden', customer.id]">
                             Ansehen
                         </li>
                         <li class="crmSK-popper-li">
                             Löschen
                         </li>
-                        <li class="crmSK-popper-li" [routerLink]="['/kunden', customer.id, 'comments']">
+                        <li class="crmSK-popper-li" [routerLink]="['crm//kunden', customer.id, 'comments']">
                             Kommentar hin. 
                         </li>
                     </ul>
