Avatar added to profile

--- a/src/app/crm/customers/customer-details/customer-details.html
+++ b/src/app/crm/customers/customer-details/customer-details.html
@@ -93,8 +93,8 @@
     <dl>
       <dt>Foto</dt>
       <dd>
-        @if (customer()?.photo) {
-          <img [src]="customer()?.photo" alt="Kundenfoto" />
+        @if (customer()?.image) {
+          <img [src]="customer()?.image" alt="Kundenfoto" />
         } @else {
           —
         }
