--- a/src/app/customer/layout-customer/layout-customer.html
+++ b/src/app/customer/layout-customer/layout-customer.html
@@ -1,5 +1,5 @@
 <main>
-   <app-navbar-customer></app-navbar-customer>
+  <app-navbar-customer></app-navbar-customer>
 
   <div class="main-content">
     <app-header-customer></app-header-customer>
@@ -8,8 +8,7 @@
   <app-toast
     [ngClass]="{
       'show-success': stateService.showToast,
-      'show-error': stateService.showError
+      'show-error': stateService.showError,
     }"
   ></app-toast>
-
 </main>
