--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,9 @@ app-newcustomer,
 app-invoices,
 app-customers,
 app-customer-details {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   margin: 1rem;
   padding: 0 1rem 1rem 1rem;
 }
@@ -138,13 +141,13 @@ app-toast {
   box-shadow: 0px 0.375rem 0.625rem 0 #00000033;
   opacity: 1;
   z-index: 1;
-  transform: translateX(100%);
+  transform: translateX(110%);
   transition: basic.$first-transition;
 }
 
 .show-success {
   opacity: 1;
-  transform: translateX(0);
+  transform: translateX(-5%);
 }
 
 app-invoice {
