--- a/src/app/customer/forgot-password/forgot-password.scss
+++ b/src/app/customer/forgot-password/forgot-password.scss
@@ -105,13 +105,12 @@
 
   .btn-container {
     display: flex;
-    justify-content: center;
-    gap: 1.875rem;
+    justify-content: space-between;
     width: 100%;
     margin-top: 1.875rem;
+    .back-button,
     .forward-btn {
       display: flex;
-      justify-content: center;
       width: fit-content;
       font-weight: 700;
       font-size: 1.125rem;
@@ -121,7 +120,6 @@
       border-radius: basic.$border-radius;
       color: basic.$thirteenth;
       background-color: basic.$primary;
-      margin-left: auto;
       margin-top: auto;
       transition: basic.$first-transition;
       &:hover {
@@ -134,6 +132,9 @@
         background-color: basic.$body-bg;
         color: basic.$primary;
       }
+    }
+    .back-button {
+      visibility: hidden;
     }
   }
 }
