--- a/src/app/customer/user-customer/profile/customer-profile.html
+++ b/src/app/customer/user-customer/profile/customer-profile.html
@@ -19,11 +19,39 @@
             </div>
           }
           <button type="button" class="edit-avatar" (click)="editAvatar()">
-            <img src="./assets/edit.svg" alt="edit"/>
+            <img src="./assets/edit.svg" alt="edit" />
           </button>
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="main-wrapper">
+  <div class="wrapper-content">
+    <button (click)="pwdRecovery()" class="password">
+      <span class="icon">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="30"
+          height="30"
+          viewBox="0 0 30 30"
+          fill="none"
+          stroke="black"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="icon icon-tabler icons-tabler-outline icon-tabler-key"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M16.555 3.843l3.602 3.602a2.877 2.877 0 0 1 0 4.069l-2.643 2.643a2.877 2.877 0 0 1 -4.069 0l-.301 -.301l-6.558 6.558a2 2 0 0 1 -1.239 .578l-.175 .008h-1.172a1 1 0 0 1 -.993 -.883l-.007 -.117v-1.172a2 2 0 0 1 .467 -1.284l.119 -.13l.414 -.414h2v-2h2v-2l2.144 -2.144l-.301 -.301a2.877 2.877 0 0 1 0 -4.069l2.643 -2.643a2.877 2.877 0 0 1 4.069 0z"
+          />
+          <path d="M15 9h.01" />
+        </svg>
+      </span>
+      Passwort ändern
+    </button>
   </div>
 </div>
 
@@ -441,3 +469,5 @@
     </div>
   </div>
 </div>
+
+<!-- <app-forgot-password (click)="closeDialog()" class="hide-container" [ngClass]="stateService.isForgotPasswordVisible ? 'show-container' : ''"> </app-forgot-password> -->
