--- a/src/app/customer/user-customer/profile/customer-profile.scss
+++ b/src/app/customer/user-customer/profile/customer-profile.scss
@@ -121,6 +121,32 @@
   }
 }
 
+.password,
+.account {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  height: 2.1875rem;
+  width: 100%;
+  border-radius: basic.$border-radius;
+  font-size: 1.25rem;
+  background: none;
+  border: dotted 0.2rem transparent;
+  overflow: hidden;
+  .icon {
+    padding-top: 0.125rem;
+  }
+  &:hover {
+    color: basic.$primary;
+    transform: scale(1.05);
+  }
+  &:focus-visible {
+    outline: none;
+    border: dotted 0.2rem basic.$primary;
+  }
+}
+
 dt {
   font-weight: bold;
   color: basic.$secondary;
@@ -184,6 +210,7 @@ dt {
   overflow-x: hidden;
   border-radius: 0.75rem;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .btn-container {
