--- a/src/app/customer/forgot-password/forgot-password.html
+++ b/src/app/customer/forgot-password/forgot-password.html
@@ -1,9 +1,9 @@
 <section class="main-content-customer">
-  <a class="arrow-back" routerLink="/login">
+  <a class="arrow-back" routerLink="/courses/login">
     <app-back></app-back>
   </a>
   <h1 class="title">Passwort zurücksetzen</h1>
-  <form [formGroup]="recoveryForm" (ngSubmit)="submit()">
+  <form class="form" [formGroup]="recoveryForm" (ngSubmit)="submit()">
     <div class="input-container">
       <label for="name">Bitte gib deine E-Mail ein:</label>
       <input
