--- a/src/app/customer/header-customer/header-customer.html
+++ b/src/app/customer/header-customer/header-customer.html
@@ -4,5 +4,5 @@
     <img width="40px" height="40px" class="profile-img" src="/assets/profile.svg" alt="Profile">
 </button>
 
-<app-user-customer (click)="closeDialog()" class="hide-container" [ngClass]="stateService.isProfileVisible ? 'show-container' : ''"></app-user-customer>
+<app-user-customer (click)="closeDialog()" class="hide-container" [ngClass]="mainStateService.isProfileVisible ? 'show-container' : ''"></app-user-customer>
 
