--- a/src/app/customer/layout-auth/layout-auth.html
+++ b/src/app/customer/layout-auth/layout-auth.html
@@ -1,14 +1,13 @@
 <main>
-  <app-navbar-customer></app-navbar-customer>
-
   <div class="main-content">
-    <app-header-customer></app-header-customer>
+    <app-header-auth></app-header-auth>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </div>
   <app-toast
     [ngClass]="{
       'show-success': mainStateService.showToast,
-      'show-error': mainStateService.showError,
+      'show-error': mainStateService.showError
     }"
   ></app-toast>
 </main>
