--- a/src/app/customer/login-customer/login-customer.html
+++ b/src/app/customer/login-customer/login-customer.html
@@ -7,7 +7,7 @@
     Wir empfehlen dir, die E-Mail-Adresse zu nutzen, die du bei der Arbeit verwendest.
   </p>
   <p class="description">
-    Hast du kein konto? <a class="new-user-link" routerLink="/create-account">Konto erstellen</a>
+    Hast du kein konto? <a class="new-user-link" routerLink="/courses/create-account">Konto erstellen</a>
   </p>
 
   <!-- form container -->
@@ -85,7 +85,7 @@
     </div>
 
     <!-- pwd recovery link -->
-    <a class="btn-password" routerLink="/forgot-password">Passwort vergessen?</a>
+    <a class="btn-password" routerLink="/courses/forgot-password">Passwort vergessen?</a>
 
     <!-- separator -->
     <div class="seperator-container">
