--- a/src/app/shared/confirmation/confirmation.html
+++ b/src/app/shared/confirmation/confirmation.html
@@ -1,5 +1,5 @@
 <section class="main-content-customer">
-  <a class="arrow-back" routerLink="/login">
+  <a class="arrow-back" routerLink="/courses/login">
     <app-back></app-back>
   </a>
   <div class="title-container">
@@ -10,6 +10,6 @@
     <p>
       {{ stateService.showConfirmationText() }}
     </p>
-      <a routerLink="/login">Anmelden</a>
+      <a routerLink="/courses/login">Anmelden</a>
   </div>
 </section>
