--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,10 @@ h3 {
   margin-bottom: 1rem;
 }
 
+app-header-auth {
+  z-index: 1;
+}
+
 app-header-customer,
 app-header {
   display: flex;
@@ -236,17 +240,25 @@ app-profile {
   // overflow-y: scroll;
 }
 
+.main-content:has(app-header-auth) {
+  .main-content-customer {
+    .arrow-back {
+      display: flex;
+    }
+    .form {
+      .btn-container {
+        .back-button {
+          visibility: hidden;
+        }
+      }
+    }
+  }
+}
+
 .main-content {
   .main-content-customer {
     .arrow-back {
       display: none;
-    }
-    form {
-      .btn-container {
-        .back-button {
-          visibility: visible !important;
-        }
-      }
     }
   }
 }
@@ -262,6 +274,7 @@ app-profile {
   font-size: 1.125rem;
   gap: 0.625rem;
   padding: 0.75rem 1.5625rem;
+  margin: auto;
   border-radius: basic.$border-radius;
   color: basic.$thirteenth;
   background-color: basic.$primary;
